deploy/k8s/production/middleware-sb-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-sb-redirect
spec:
  redirectRegex:
    regex: "^https://sb\\.([^/]+).*$"
    replacement: "https://${1}"
    permanent: true
